--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
+body{
+  background-color: beige;
+}
+
 .App {
-  text-align: center;
+  text-align: left;
+  margin-top: 50px;
+  position: absolute;
+  left: 20%;
+  background-color: beige;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+form {
+  display: inline-block;
+  text-align: left;
+  position: absolute;
+  left: 20%;
+  /* background-color: beige; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+div {
+  margin-bottom: 10px;
+  /* background-color: beige; */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+label {
+  display: block;
+  margin-bottom: 5px;
+  margin-left: 5%;
 }
 
-.App-link {
-  color: #61dafb;
+input, select {
+  padding: 10px;
+  margin-top: 5px;
+  margin-left: 1%;
+}
+button{
+  position: absolute;
+  left: 5%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p {
+  color: red;
+  margin: 0;
 }
